# lib/db/src/schema/songs.ts
@@ -1,4 +1,4 @@
-import { pgTable, text, serial, timestamp, boolean } from "drizzle-orm/pg-core";
+import { pgTable, text, serial, timestamp, boolean, numeric } from "drizzle-orm/pg-core";
 import { createInsertSchema } from "drizzle-zod";
 import { z } from "zod/v4";
 
@@ -7,6 +7,11 @@ export const songsTable = pgTable("songs", {
   titulo: text("titulo").notNull(),
   descricao: text("descricao").notNull(),
   genero: text("genero").notNull(),
+  subgenero: text("subgenero"),
+  compositor: text("compositor"),
+  status: text("status").notNull().default("Disponível"),
+  precoX: numeric("preco_x"),
+  precoY: numeric("preco_y"),
   capaPath: text("capa_path"),
   mp3Path: text("mp3_path"),
   isVip: boolean("is_vip").notNull().default(false),
